[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/CAsset/Weapons/Base/18.png" type="Texture" id=1]
[ext_resource path="res://assets/CAsset/Weapons/19/skeleton-animation_0.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/EnemyStaticFireBall.gd" type="Script" id=3]
[ext_resource path="res://assets/CAsset/Collision FX/Fx03/skeleton-animation_3.png" type="Texture" id=4]
[ext_resource path="res://assets/CAsset/Collision FX/Fx03/skeleton-animation_5.png" type="Texture" id=5]
[ext_resource path="res://assets/CAsset/Collision FX/Fx03/skeleton-animation_2.png" type="Texture" id=6]
[ext_resource path="res://assets/CAsset/Collision FX/Fx03/skeleton-animation_4.png" type="Texture" id=7]
[ext_resource path="res://assets/CAsset/Collision FX/Fx03/skeleton-animation_1.png" type="Texture" id=8]
[ext_resource path="res://assets/CAsset/Collision FX/Fx03/skeleton-animation_0.png" type="Texture" id=9]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_8.png" type="Texture" id=10]
[ext_resource path="res://src/Objects/BulletEnemyStatic.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_0.png" type="Texture" id=12]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_9.png" type="Texture" id=13]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_1.png" type="Texture" id=14]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_4.png" type="Texture" id=15]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_6.png" type="Texture" id=16]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_5.png" type="Texture" id=17]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_7.png" type="Texture" id=18]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_2.png" type="Texture" id=19]
[ext_resource path="res://assets/CAsset/Weapons/05/skeleton-Shoot_3.png" type="Texture" id=20]
[ext_resource path="res://assets/CAsset/Collision FX/02/3.png" type="Texture" id=21]
[ext_resource path="res://assets/CAsset/Collision FX/02/2.png" type="Texture" id=22]
[ext_resource path="res://assets/CAsset/Collision FX/02/1.png" type="Texture" id=23]
[ext_resource path="res://assets/CAsset/Collision FX/02/6.png" type="Texture" id=24]
[ext_resource path="res://assets/CAsset/Collision FX/02/5.png" type="Texture" id=25]
[ext_resource path="res://assets/CAsset/Collision FX/02/7.png" type="Texture" id=26]
[ext_resource path="res://assets/CAsset/Collision FX/02/4.png" type="Texture" id=27]

[sub_resource type="CapsuleShape2D" id=1]
height = 1017.01

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 13 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "buzz",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "buzz",
"speed": 5.0
} ]

[node name="EnemyStaticFireball" type="Area2D"]
collision_layer = 2
collision_mask = 2049
script = ExtResource( 3 )
bullet = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, -48 )
scale = Vector2( 32.8222, 0.769182 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -50, -33, 100, 66 )
process_parent = true
physics_process_parent = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 143.511, -307.543 )
scale = Vector2( 4.0748, 2.5 )
frames = SubResource( 2 )
animation = "shoot"
frame = 1
playing = true
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 537.818, -227.184 )
z_index = -1
frames = SubResource( 3 )
animation = "buzz"
playing = true

[node name="TimerDie" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerShoot" type="Timer" parent="."]
wait_time = 3.0

[node name="18" type="Sprite" parent="."]
position = Vector2( -8.94482, 107.438 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="skeleton-animation_0" type="Sprite" parent="."]
position = Vector2( -13.7444, -191.932 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Barrel" type="Position2D" parent="."]
position = Vector2( 474.997, -226.163 )

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="timeout" from="TimerDie" to="." method="_on_TimerDie_timeout"]
[connection signal="timeout" from="TimerShoot" to="." method="_on_TimerShoot_timeout"]
